force-app/main/default/objects/Risk_Factor__c/Risk_Factor__c.object-meta.xml
<CustomObject>
    <description>This is a temporary object used  to capture risk related information about brands presence in the village . The risk detail will be exported out and fed into Power BI to generate management dashboards.</description>
    <label>Risk Factor</label>
    <nameField>
        <displayFormat>RF-{0}</displayFormat>
        <label>Risk Factor #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>