force-app/main/default/objects/Risk_Factor__c/fields/Brand_Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Brand_Risk_Category__c</fullName>
    <inlineHelpText>Why could they not reopen - financial, operational (stock, staff, IT,shopfit), compliance (insurance), strategy (decided to close stores) etc</inlineHelpText>
    <label>Brand Risk Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>