force-app/main/default/objects/Risk_Factor__c/fields/Brand_Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Brand_Risk_Description__c</fullName>
    <inlineHelpText>Add more detail as to why you think the brand is at risk.</inlineHelpText>
    <label>Brand Risk Description</label>
    <type>TextArea</type>
</CustomField>