force-app/main/default/objects/Risk_Factor__c/fields/Brand_Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Brand_Risk_Status__c</fullName>
    <inlineHelpText>What is the risk of failure of the brand/or inability to open the store?</inlineHelpText>
    <label>Brand Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>