force-app/main/default/objects/Risk_Factor__c/fields/Contract_Breach_Letter_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Breach_Letter_Sent_Date__c</fullName>
    <description>Legal team update (Label name &amp; help text)</description>
    <inlineHelpText>Date when Legal team sent a breach of contract letter to the brand</inlineHelpText>
    <label>Contract Breach Letter - Sent Date</label>
    <type>Date</type>
</CustomField>