force-app/main/default/objects/Risk_Factor__c/fields/Direct_Debit_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the brand cancelled their Direct Debit (or equivalent) with their bank?</inlineHelpText>
    <label>Direct Debit Cancelled</label>
    <type>Checkbox</type>
</CustomField>