force-app/main/default/objects/Risk_Factor__c/fields/Direct_Debit_Cancelled_Comments__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Cancelled_Comments__c</fullName>
    <inlineHelpText>Who was the notification sent to and when, plus any other details</inlineHelpText>
    <label>Direct Debit Cancelled Comments</label>
    <type>TextArea</type>
</CustomField>