force-app/main/default/objects/Risk_Factor__c/fields/Furloughed_Staff__c.field-meta.xml
<CustomField>
    <fullName>Furloughed_Staff__c</fullName>
    <inlineHelpText>Have the brand&apos;s staff been furloughed/temporarily unemployed?</inlineHelpText>
    <label>Furloughed Staff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>