force-app/main/default/objects/Risk_Factor__c/fields/Furloughed_Staff_Comments__c.field-meta.xml
<CustomField>
    <fullName>Furloughed_Staff_Comments__c</fullName>
    <inlineHelpText>Please provide any additional detail eg % of staff, only store staff or all staff?</inlineHelpText>
    <label>Furloughed Staff Comments</label>
    <type>TextArea</type>
</CustomField>