force-app/main/default/objects/Risk_Factor__c/fields/Interested_in_Discretionary_Discount__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Discretionary_Discount__c</fullName>
    <inlineHelpText>How likely is it that the brand could not reopen or it will fail?</inlineHelpText>
    <label>Likelihood of Failure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 (Unlikely)</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 (Highly likely)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>