force-app/main/default/objects/Risk_Factor__c/fields/Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>Primary_Key__c</fullName>
    <label>Primary Key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>