force-app/main/default/objects/Risk_Factor__c/fields/Rent_Reduction_Request__c.field-meta.xml
<CustomField>
    <fullName>Rent_Reduction_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the Brand requested a rent reduction?</inlineHelpText>
    <label>Rent Reduction Request</label>
    <type>Checkbox</type>
</CustomField>