force-app/main/default/objects/Risk_Factor__c/fields/Rent_Reduction_Suspension_Request_Detail__c.field-meta.xml
<CustomField>
    <fullName>Rent_Reduction_Suspension_Request_Detail__c</fullName>
    <inlineHelpText>Please provide any additional detail/reason for this request.</inlineHelpText>
    <label>Rent Reduction/Suspension Request Detail</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>