force-app/main/default/objects/Risk_Factor__c/fields/Rent_Suspension_Request__c.field-meta.xml
<CustomField>
    <fullName>Rent_Suspension_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the Brand requested a rent suspension?</inlineHelpText>
    <label>Rent Suspension Request</label>
    <type>Checkbox</type>
</CustomField>