force-app/main/default/objects/Risk_Factor__c/fields/Village_Presence__c.field-meta.xml
<CustomField>
    <fullName>Village_Presence__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the Village Presence to which this risk factor is associated to.</inlineHelpText>
    <label>Village Presence</label>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>Risk Factors</relationshipLabel>
    <relationshipName>Risk_Factors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>