force-app/main/default/objects/Risk_Factor__c/recordTypes/Risk_Type.recordType-meta.xml
<RecordType>
    <fullName>Risk_Type</fullName>
    <active>true</active>
    <label>Risk Type</label>
</RecordType>