force-app/main/default/objects/Risk_Factor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Village_Presence__c</columns>
    <columns>Brand_Risk_Category__c</columns>
    <columns>Brand_Risk_Status__c</columns>
    <columns>Contract_Breach_Letter_Sent_Date__c</columns>
    <columns>Direct_Debit_Cancelled__c</columns>
    <columns>Furloughed_Staff__c</columns>
    <columns>Rent_Reduction_Request__c</columns>
    <columns>Rent_Suspension_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>